--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,9 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1,
@@ -35,4 +38,262 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  align-items: end;
+ 
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+
+.result__video-container {
+  height: 386px;
+  width: 711px;
+  position: relative;
+}
+
+.result__video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 400;
+  font-size: 18px;
+  color: #fff;
+  font-family: 'Fira Sans Condensed';
+  font-style: normal;
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 16px;
+  
+}
+
+.search-form__fieldset-title {
+  font-weight: 400;
+  font-size: 18px;
+  color: #fff;
+  font-family: 'Fira Sans Condensed';
+  font-style: normal;
+  line-height: 30px;
+}
+
+.search-form__textfield {
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  width: 225px;
+  border-bottom: 1px solid #fff;
+  border-top: 1px solid #fff;
+  font-weight: 400;
+  font-size: 18px;
+  color: #fff;
+  font-family: 'Fira Sans Condensed';
+  
+}
+
+input::placeholder {
+  font-weight: 400;
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.7);
+  font-family: 'Fira Sans Condensed';
+}
+
+  .search-form__pseudo-checkbox {
+   width: 19px;
+   height: 19px;
+   border: 1px solid #fff;
+   display: inline-block;
+   vertical-align: middle;
+   cursor: pointer;
+   position: relative;
+  }
+
+.button {
+  background-color: transparent;
+  border: 1px solid #fff;
+  height: 34px;
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  color: #fff;
+  font-family: 'Fira Sans Condensed';
+  cursor: pointer;
+}
+
+.search-form__submit-button{
+  width: 194px;
+  align-self: end;
+}
+
+.content__details {
+  display: flex;
+  gap: 26px;
+  flex-direction: column;
+}
+
+.content__list {
+  height: 298px;
+  position: relative;
+  overflow-y: auto;
+  }
+
+  .content__video-card {
+    display: flex;
+    justify-content: space-between;
+    
+    
+  }
+
+  .content__video-card-thumbnail {
+    width: 194px;
+    height: 103px;
+    
+  }
+  
+  .title {
+    font-weight: 700;
+    font-size: 75px;
+    line-height: 94%;
+    text-transform: uppercase;
+    font-family: Oswald;
+  }
+  
+  .content__accent {
+    color: #545050;
+  }
+ 
+.content__video-card-title{
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: #fff;
+  font-family: Oswald;
+  margin-top: 6px;
+}
+
+.content__video-card-description {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 135%;
+  color: #fff;
+  font-family: 'Fira Sans Condensed';
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.content__card-link {
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+} 
+
+.more-button {
+  width: 100%;
+}
+
+li:not(:last-child) {
+  padding-bottom: 30px;
+}
+
+.content__list-item {
+  width: 394px;
+  margin: 2px;
+}
+
+.search-form__label {
+  cursor: pointer;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__textfield:focus {
+  outline: none; 
+}
+
+.search-form__textfield:active {
+  outline: 1px solid #fff;
+}
+
+
+.search-form__checkbox:checked+.search-form__pseudo-checkbox::before {
+  content: '';
+  position: absolute;
+  inset: 1px;
+  background-color: white;
+}
+
+.search-form__checkbox:active+.search-form__pseudo-checkbox::before {
+  content: '';
+  position: absolute;
+  inset: 1px;
+  background-color: white;
+}
+
+.search-form__label:has(focus-visible) {
+  outline: 1px solid #fff;
+}
+
+.search-form__checkbox:hover~.search-form__label-text {
+  text-decoration: underline;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:focus {
+  none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: -3px;
+}
+
+.content__card-link:hover{
+text-decoration: underline;
+color: #fff;
+}
+
+.content__card-link:active {
+  background-color: #545050;
 }
