--- a/styles/style.css
+++ b/styles/style.css
@@ -93,7 +93,7 @@ ol {
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-style: normal;
-  line-height: 35px;
+  padding-bottom: 8px;
 }
 
 .search-form__textfield {
@@ -148,7 +148,7 @@ input::placeholder {
   display: flex;
   gap: 26px;
   flex-direction: column;
-  min-width: 394px;
+  min-width: 398px;
 }
 
 .content__list {
